modif bug ombre header version tablet

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -111,9 +111,8 @@ body {
   }
 
   .degrade {
-    height: 50%;
+    height: 160px;
   }
-
   .opaque1 {
     width: 150px;
   }
